-Made several improvements to timeSliceTree thanks to modified code from Klaus Schliep, particularly replacing use of dist.nodes for root-to-tip distances with node.depth.edgelength instead (much more efficient, much faster!)
	-Made similar changes to all functions in modifyTerminalBranches based on this suggestions, including dropExtinct

Version - 2.5 - 09-20-15
-Added argument APIversion to makePBDBtaxonTree which allows a user to control which version of the API is called when argument solveMissing=queryPBDB. Current default is "1.1", this will need to be updated when PBDB API 1.2 becomes public
-Added some safety checks to degradeTree
-Added function equation2function which converts a character string containing the right-hand side of a single-line equation (like from class formula) to an R function with arguments corresponding the parameters in the input equation.
-Added handling for ambiguous and polymorphic characters to minCharChange, AncPropStateMat and resolveTreeChar by adding support for these options as they already existed in phangorn
-Altered function parentChild2TaxonTree to handle datasets where root-ancestor was indicated with an NA value
-Additional checking in testEdgeMat to catch when the root node is misnumbered,  also additional checking taken with modification from Emmanuel Paradis's checkValidPhylo
-Additional routines in cleanNewPhylo to convert $edge and $Nnode to integer storage, and in case collapse.singles fails to collapse all nodes
-Modified taxa2phylo, expandTaxonTree, resolveTreeChar, taxa2cladogram to use cleanNewPhylo
-Sweeping grandiose changes of how trees are created, cleaned, checked, etc with loads of tiny hidden functions. An unlikable yet necessary thing to implement.
-Function taxa2phylo apparently requires that taxa be ordered by FAD, with the root ancestor being listed first (probably reflecting bad coding practices of Dave circa 2011...)